# Tir

./: CMakeLists.txt  functor.hpp  main.cpp  struct.hpp  types.hpp
header/: color.hpp  data.hpp  delay.hpp  delay_base.hpp  event.hpp  graphic_object.hpp  rectf.hpp  score.hpp  score_manage.hpp  sprite.hpp  targets_functor.hpp  text.hpp  type_score.hpp  vector2f.hpp  vector2i.hpp  vector2ui.hpp  window.hpp
interface/: idrawable.hpp  ievent.hpp  iintersect.hpp  ipaintable.hpp  isprite.hpp  istatic.hpp  itext.hpp  itransform.hpp  iwindow.hpp
lib/SFML-2.5.1/unix/include/SFML/Graphics/: RenderTarget.hpp  Transform.hpp
lib/SFML-2.5.1/unix/include/SFML/Window/: Event.hpp
resources/SFML-2.5.1/unix/include/SFML/Graphics/: Transformable.hpp  View.hpp
src/: data.cpp  delay_base.cpp  event.cpp  score.cpp  score_manage.cpp  sprite.cpp  targets_functor.cpp  text.cpp  type_score.cpp  window.cpp
